src/y.output
Grammar

    0 $accept: program_unit $end

    1 program_unit: HEADER program_unit
    2             | DEFINE primary_exp program_unit
    3             | translation_unit

    4 translation_unit: external_decl
    5                 | translation_unit external_decl

    6 external_decl: function_definition
    7              | decl

    8 function_definition: type_const id declarator compound_stat

    9 decl: type_const init_declarator_list ';'
   10     | type_const ';'

   11 decl_list: decl
   12          | decl_list decl

   13 init_declarator_list: init_declarator
   14                     | init_declarator_list ',' init_declarator

   15 init_declarator: declarator
   16                | declarator '=' initializer

   17 spec_qualifier_list: type_const spec_qualifier_list
   18                    | type_const

   19 declarator: '(' param_type_list ')'
   20           | '(' ')'

   21 direct_declarator: id
   22                  | direct_declarator '[' const_exp ']'
   23                  | direct_declarator '[' ']'
   24                  | direct_declarator '(' param_type_list ')'
   25                  | direct_declarator '(' id_list ')'
   26                  | direct_declarator '(' ')'

   27 param_type_list: param_list
   28                | param_list ',' param_const

   29 param_list: param_decl
   30           | param_list ',' param_decl

   31 param_decl: type_const direct_declarator
   32           | type_const abstract_declarator
   33           | type_const

   34 id_list: id
   35        | id_list ',' id

   36 initializer: assignment_exp
   37            | '{' initializer_list '}'
   38            | '{' initializer_list ',' '}'

   39 initializer_list: initializer
   40                 | initializer_list ',' initializer

   41 type_name: spec_qualifier_list abstract_declarator
   42          | spec_qualifier_list

   43 abstract_declarator: direct_abstract_declarator

   44 direct_abstract_declarator: '(' abstract_declarator ')'
   45                           | direct_abstract_declarator '[' const_exp ']'
   46                           | '[' const_exp ']'
   47                           | direct_abstract_declarator '[' ']'
   48                           | '[' ']'
   49                           | direct_abstract_declarator '(' param_type_list ')'
   50                           | '(' param_type_list ')'
   51                           | direct_abstract_declarator '(' ')'
   52                           | '(' ')'

   53 stat: labeled_stat
   54     | exp_stat
   55     | compound_stat
   56     | selection_stat
   57     | iteration_stat
   58     | jump_stat

   59 labeled_stat: id ':' stat
   60             | CASE const_exp ':' stat
   61             | DEFAULT ':' stat

   62 exp_stat: exp ';'
   63         | ';'

   64 compound_stat: '{' decl_list stat_list '}'
   65              | '{' stat_list '}'
   66              | '{' decl_list '}'
   67              | '{' '}'

   68 stat_list: stat
   69          | stat_list stat

   70 selection_stat: IF '(' exp ')' stat
   71               | IF '(' exp ')' stat ELSE stat
   72               | SWITCH '(' exp ')' stat

   73 iteration_stat: WHILE '(' exp ')' stat
   74               | DO stat WHILE '(' exp ')' ';'
   75               | FOR '(' exp ';' exp ';' exp ')' stat
   76               | FOR '(' exp ';' exp ';' ')' stat
   77               | FOR '(' exp ';' ';' exp ')' stat
   78               | FOR '(' exp ';' ';' ')' stat
   79               | FOR '(' ';' exp ';' exp ')' stat
   80               | FOR '(' ';' exp ';' ')' stat
   81               | FOR '(' ';' ';' exp ')' stat
   82               | FOR '(' ';' ';' ')' stat

   83 jump_stat: CONTINUE ';'
   84          | BREAK ';'
   85          | RETURN exp ';'
   86          | RETURN ';'

   87 exp: assignment_exp
   88    | exp ',' assignment_exp

   89 assignment_exp: conditional_exp
   90               | unary_exp assignment_operator assignment_exp

   91 assignment_operator: PUNC
   92                    | '='

   93 conditional_exp: logical_or_exp
   94                | logical_or_exp '?' exp ':' conditional_exp

   95 const_exp: conditional_exp

   96 logical_or_exp: logical_and_exp
   97               | logical_or_exp or_const logical_and_exp

   98 logical_and_exp: inclusive_or_exp
   99                | logical_and_exp and_const inclusive_or_exp

  100 inclusive_or_exp: exclusive_or_exp
  101                 | inclusive_or_exp '|' exclusive_or_exp

  102 exclusive_or_exp: and_exp
  103                 | exclusive_or_exp '^' and_exp

  104 and_exp: equality_exp
  105        | and_exp '&' equality_exp

  106 equality_exp: relational_exp
  107             | equality_exp eq_const relational_exp

  108 relational_exp: shift_expression
  109               | relational_exp '<' shift_expression
  110               | relational_exp '>' shift_expression
  111               | relational_exp rel_const shift_expression

  112 shift_expression: additive_exp
  113                 | shift_expression shift_const additive_exp

  114 additive_exp: mult_exp
  115             | additive_exp '+' mult_exp
  116             | additive_exp '-' mult_exp

  117 mult_exp: cast_exp
  118         | mult_exp '*' cast_exp
  119         | mult_exp '/' cast_exp
  120         | mult_exp '%' cast_exp

  121 cast_exp: unary_exp
  122         | '(' type_name ')' cast_exp

  123 unary_exp: postfix_exp
  124          | inc_const unary_exp
  125          | unary_operator cast_exp

  126 unary_operator: '&'
  127               | '*'
  128               | '+'
  129               | '-'
  130               | '~'
  131               | '!'

  132 postfix_exp: primary_exp
  133            | postfix_exp '[' exp ']'
  134            | postfix_exp '(' argument_exp_list ')'
  135            | postfix_exp '(' ')'
  136            | postfix_exp '.' id
  137            | postfix_exp inc_const

  138 primary_exp: id
  139            | consts
  140            | string
  141            | '(' exp ')'

  142 argument_exp_list: assignment_exp
  143                  | argument_exp_list ',' assignment_exp

  144 consts: int_const
  145       | float_const


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 131
    '%' (37) 120
    '&' (38) 105 126
    '(' (40) 19 20 24 25 26 44 49 50 51 52 70 71 72 73 74 75 76 77 78 79 80 81 82 122 134 135 141
    ')' (41) 19 20 24 25 26 44 49 50 51 52 70 71 72 73 74 75 76 77 78 79 80 81 82 122 134 135 141
    '*' (42) 118 127
    '+' (43) 115 128
    ',' (44) 14 28 30 35 38 40 88 143
    '-' (45) 116 129
    '.' (46) 136
    '/' (47) 119
    ':' (58) 59 60 61 94
    ';' (59) 9 10 62 63 74 75 76 77 78 79 80 81 82 83 84 85 86
    '<' (60) 109
    '=' (61) 16 92
    '>' (62) 110
    '?' (63) 94
    '[' (91) 22 23 45 46 47 48 133
    ']' (93) 22 23 45 46 47 48 133
    '^' (94) 103
    '{' (123) 37 38 64 65 66 67
    '|' (124) 101
    '}' (125) 37 38 64 65 66 67
    '~' (126) 130
    error (256)
    int_const (258) 144
    float_const (259) 145
    id (260) 8 21 34 35 59 136 138
    string (261) 140
    type_const (262) 8 9 10 17 18 31 32 33
    DEFINE (263) 2
    IF (264) 70 71
    FOR (265) 75 76 77 78 79 80 81 82
    DO (266) 74
    WHILE (267) 73 74
    BREAK (268) 84
    SWITCH (269) 72
    CONTINUE (270) 83
    RETURN (271) 85 86
    CASE (272) 60
    DEFAULT (273) 61
    PUNC (274) 91
    or_const (275) 97
    and_const (276) 99
    eq_const (277) 107
    shift_const (278) 113
    rel_const (279) 111
    inc_const (280) 124 137
    param_const (281) 28
    ELSE (282) 71
    HEADER (283) 1
    THEN (284)


Nonterminals, with rules where they appear

    $accept (54)
        on left: 0
    program_unit (55)
        on left: 1 2 3
        on right: 0 1 2
    translation_unit (56)
        on left: 4 5
        on right: 3 5
    external_decl (57)
        on left: 6 7
        on right: 4 5
    function_definition (58)
        on left: 8
        on right: 6
    decl (59)
        on left: 9 10
        on right: 7 11 12
    decl_list (60)
        on left: 11 12
        on right: 12 64 66
    init_declarator_list (61)
        on left: 13 14
        on right: 9 14
    init_declarator (62)
        on left: 15 16
        on right: 13 14
    spec_qualifier_list (63)
        on left: 17 18
        on right: 17 41 42
    declarator (64)
        on left: 19 20
        on right: 8 15 16
    direct_declarator (65)
        on left: 21 22 23 24 25 26
        on right: 22 23 24 25 26 31
    param_type_list (66)
        on left: 27 28
        on right: 19 24 49 50
    param_list (67)
        on left: 29 30
        on right: 27 28 30
    param_decl (68)
        on left: 31 32 33
        on right: 29 30
    id_list (69)
        on left: 34 35
        on right: 25 35
    initializer (70)
        on left: 36 37 38
        on right: 16 39 40
    initializer_list (71)
        on left: 39 40
        on right: 37 38 40
    type_name (72)
        on left: 41 42
        on right: 122
    abstract_declarator (73)
        on left: 43
        on right: 32 41 44
    direct_abstract_declarator (74)
        on left: 44 45 46 47 48 49 50 51 52
        on right: 43 45 47 49 51
    stat (75)
        on left: 53 54 55 56 57 58
        on right: 59 60 61 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82
    labeled_stat (76)
        on left: 59 60 61
        on right: 53
    exp_stat (77)
        on left: 62 63
        on right: 54
    compound_stat (78)
        on left: 64 65 66 67
        on right: 8 55
    stat_list (79)
        on left: 68 69
        on right: 64 65 69
    selection_stat (80)
        on left: 70 71 72
        on right: 56
    iteration_stat (81)
        on left: 73 74 75 76 77 78 79 80 81 82
        on right: 57
    jump_stat (82)
        on left: 83 84 85 86
        on right: 58
    exp (83)
        on left: 87 88
        on right: 62 70 71 72 73 74 75 76 77 78 79 80 81 85 88 94 133 141
    assignment_exp (84)
        on left: 89 90
        on right: 36 87 88 90 142 143
    assignment_operator (85)
        on left: 91 92
        on right: 90
    conditional_exp (86)
        on left: 93 94
        on right: 89 94 95
    const_exp (87)
        on left: 95
        on right: 22 45 46 60
    logical_or_exp (88)
        on left: 96 97
        on right: 93 94 97
    logical_and_exp (89)
        on left: 98 99
        on right: 96 97 99
    inclusive_or_exp (90)
        on left: 100 101
        on right: 98 99 101
    exclusive_or_exp (91)
        on left: 102 103
        on right: 100 101 103
    and_exp (92)
        on left: 104 105
        on right: 102 103 105
    equality_exp (93)
        on left: 106 107
        on right: 104 105 107
    relational_exp (94)
        on left: 108 109 110 111
        on right: 106 107 109 110 111
    shift_expression (95)
        on left: 112 113
        on right: 108 109 110 111 113
    additive_exp (96)
        on left: 114 115 116
        on right: 112 113 115 116
    mult_exp (97)
        on left: 117 118 119 120
        on right: 114 115 116 118 119 120
    cast_exp (98)
        on left: 121 122
        on right: 117 118 119 120 122 125
    unary_exp (99)
        on left: 123 124 125
        on right: 90 121 124
    unary_operator (100)
        on left: 126 127 128 129 130 131
        on right: 125
    postfix_exp (101)
        on left: 132 133 134 135 136 137
        on right: 123 133 134 135 136 137
    primary_exp (102)
        on left: 138 139 140 141
        on right: 2 132
    argument_exp_list (103)
        on left: 142 143
        on right: 134 143
    consts (104)
        on left: 144 145
        on right: 139


State 0

    0 $accept: . program_unit $end

    type_const  shift, and go to state 1
    DEFINE      shift, and go to state 2
    HEADER      shift, and go to state 3

    program_unit         go to state 4
    translation_unit     go to state 5
    external_decl        go to state 6
    function_definition  go to state 7
    decl                 go to state 8


State 1

    8 function_definition: type_const . id declarator compound_stat
    9 decl: type_const . init_declarator_list ';'
   10     | type_const . ';'

    id   shift, and go to state 9
    ';'  shift, and go to state 10
    '('  shift, and go to state 11

    init_declarator_list  go to state 12
    init_declarator       go to state 13
    declarator            go to state 14


State 2

    2 program_unit: DEFINE . primary_exp program_unit

    int_const    shift, and go to state 15
    float_const  shift, and go to state 16
    id           shift, and go to state 17
    string       shift, and go to state 18
    '('          shift, and go to state 19

    primary_exp  go to state 20
    consts       go to state 21


State 3

    1 program_unit: HEADER . program_unit

    type_const  shift, and go to state 1
    DEFINE      shift, and go to state 2
    HEADER      shift, and go to state 3

    program_unit         go to state 22
    translation_unit     go to state 5
    external_decl        go to state 6
    function_definition  go to state 7
    decl                 go to state 8


State 4

    0 $accept: program_unit . $end

    $end  shift, and go to state 23


State 5

    3 program_unit: translation_unit .
    5 translation_unit: translation_unit . external_decl

    type_const  shift, and go to state 1

    $default  reduce using rule 3 (program_unit)

    external_decl        go to state 24
    function_definition  go to state 7
    decl                 go to state 8


State 6

    4 translation_unit: external_decl .

    $default  reduce using rule 4 (translation_unit)


State 7

    6 external_decl: function_definition .

    $default  reduce using rule 6 (external_decl)


State 8

    7 external_decl: decl .

    $default  reduce using rule 7 (external_decl)


State 9

    8 function_definition: type_const id . declarator compound_stat

    '('  shift, and go to state 11

    declarator  go to state 25


State 10

   10 decl: type_const ';' .

    $default  reduce using rule 10 (decl)


State 11

   19 declarator: '(' . param_type_list ')'
   20           | '(' . ')'

    type_const  shift, and go to state 26
    ')'         shift, and go to state 27

    param_type_list  go to state 28
    param_list       go to state 29
    param_decl       go to state 30


State 12

    9 decl: type_const init_declarator_list . ';'
   14 init_declarator_list: init_declarator_list . ',' init_declarator

    ';'  shift, and go to state 31
    ','  shift, and go to state 32


State 13

   13 init_declarator_list: init_declarator .

    $default  reduce using rule 13 (init_declarator_list)


State 14

   15 init_declarator: declarator .
   16                | declarator . '=' initializer

    '='  shift, and go to state 33

    $default  reduce using rule 15 (init_declarator)


State 15

  144 consts: int_const .

    $default  reduce using rule 144 (consts)


State 16

  145 consts: float_const .

    $default  reduce using rule 145 (consts)


State 17

  138 primary_exp: id .

    $default  reduce using rule 138 (primary_exp)


State 18

  140 primary_exp: string .

    $default  reduce using rule 140 (primary_exp)


State 19

  141 primary_exp: '(' . exp ')'

    int_const    shift, and go to state 15
    float_const  shift, and go to state 16
    id           shift, and go to state 17
    string       shift, and go to state 18
    inc_const    shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36
    '*'          shift, and go to state 37
    '('          shift, and go to state 38
    '&'          shift, and go to state 39
    '~'          shift, and go to state 40
    '!'          shift, and go to state 41

    exp               go to state 42
    assignment_exp    go to state 43
    conditional_exp   go to state 44
    logical_or_exp    go to state 45
    logical_and_exp   go to state 46
    inclusive_or_exp  go to state 47
    exclusive_or_exp  go to state 48
    and_exp           go to state 49
    equality_exp      go to state 50
    relational_exp    go to state 51
    shift_expression  go to state 52
    additive_exp      go to state 53
    mult_exp          go to state 54
    cast_exp          go to state 55
    unary_exp         go to state 56
    unary_operator    go to state 57
    postfix_exp       go to state 58
    primary_exp       go to state 59
    consts            go to state 21


State 20

    2 program_unit: DEFINE primary_exp . program_unit

    type_const  shift, and go to state 1
    DEFINE      shift, and go to state 2
    HEADER      shift, and go to state 3

    program_unit         go to state 60
    translation_unit     go to state 5
    external_decl        go to state 6
    function_definition  go to state 7
    decl                 go to state 8


State 21

  139 primary_exp: consts .

    $default  reduce using rule 139 (primary_exp)


State 22

    1 program_unit: HEADER program_unit .

    $default  reduce using rule 1 (program_unit)


State 23

    0 $accept: program_unit $end .

    $default  accept


State 24

    5 translation_unit: translation_unit external_decl .

    $default  reduce using rule 5 (translation_unit)


State 25

    8 function_definition: type_const id declarator . compound_stat

    '{'  shift, and go to state 61

    compound_stat  go to state 62


State 26

   31 param_decl: type_const . direct_declarator
   32           | type_const . abstract_declarator
   33           | type_const .

    id   shift, and go to state 63
    '('  shift, and go to state 64
    '['  shift, and go to state 65

    $default  reduce using rule 33 (param_decl)

    direct_declarator           go to state 66
    abstract_declarator         go to state 67
    direct_abstract_declarator  go to state 68


State 27

   20 declarator: '(' ')' .

    $default  reduce using rule 20 (declarator)


State 28

   19 declarator: '(' param_type_list . ')'

    ')'  shift, and go to state 69


State 29

   27 param_type_list: param_list .
   28                | param_list . ',' param_const
   30 param_list: param_list . ',' param_decl

    ','  shift, and go to state 70

    $default  reduce using rule 27 (param_type_list)


State 30

   29 param_list: param_decl .

    $default  reduce using rule 29 (param_list)


State 31

    9 decl: type_const init_declarator_list ';' .

    $default  reduce using rule 9 (decl)


State 32

   14 init_declarator_list: init_declarator_list ',' . init_declarator

    '('  shift, and go to state 11

    init_declarator  go to state 71
    declarator       go to state 14


State 33

   16 init_declarator: declarator '=' . initializer

    int_const    shift, and go to state 15
    float_const  shift, and go to state 16
    id           shift, and go to state 17
    string       shift, and go to state 18
    inc_const    shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36
    '*'          shift, and go to state 37
    '('          shift, and go to state 38
    '{'          shift, and go to state 72
    '&'          shift, and go to state 39
    '~'          shift, and go to state 40
    '!'          shift, and go to state 41

    initializer       go to state 73
    assignment_exp    go to state 74
    conditional_exp   go to state 44
    logical_or_exp    go to state 45
    logical_and_exp   go to state 46
    inclusive_or_exp  go to state 47
    exclusive_or_exp  go to state 48
    and_exp           go to state 49
    equality_exp      go to state 50
    relational_exp    go to state 51
    shift_expression  go to state 52
    additive_exp      go to state 53
    mult_exp          go to state 54
    cast_exp          go to state 55
    unary_exp         go to state 56
    unary_operator    go to state 57
    postfix_exp       go to state 58
    primary_exp       go to state 59
    consts            go to state 21


State 34

  124 unary_exp: inc_const . unary_exp

    int_const    shift, and go to state 15
    float_const  shift, and go to state 16
    id           shift, and go to state 17
    string       shift, and go to state 18
    inc_const    shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36
    '*'          shift, and go to state 37
    '('          shift, and go to state 19
    '&'          shift, and go to state 39
    '~'          shift, and go to state 40
    '!'          shift, and go to state 41

    unary_exp       go to state 75
    unary_operator  go to state 57
    postfix_exp     go to state 58
    primary_exp     go to state 59
    consts          go to state 21


State 35

  128 unary_operator: '+' .

    $default  reduce using rule 128 (unary_operator)


State 36

  129 unary_operator: '-' .

    $default  reduce using rule 129 (unary_operator)


State 37

  127 unary_operator: '*' .

    $default  reduce using rule 127 (unary_operator)


State 38

  122 cast_exp: '(' . type_name ')' cast_exp
  141 primary_exp: '(' . exp ')'

    int_const    shift, and go to state 15
    float_const  shift, and go to state 16
    id           shift, and go to state 17
    string       shift, and go to state 18
    type_const   shift, and go to state 76
    inc_const    shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36
    '*'          shift, and go to state 37
    '('          shift, and go to state 38
    '&'          shift, and go to state 39
    '~'          shift, and go to state 40
    '!'          shift, and go to state 41

    spec_qualifier_list  go to state 77
    type_name            go to state 78
    exp                  go to state 42
    assignment_exp       go to state 43
    conditional_exp      go to state 44
    logical_or_exp       go to state 45
    logical_and_exp      go to state 46
    inclusive_or_exp     go to state 47
    exclusive_or_exp     go to state 48
    and_exp              go to state 49
    equality_exp         go to state 50
    relational_exp       go to state 51
    shift_expression     go to state 52
    additive_exp         go to state 53
    mult_exp             go to state 54
    cast_exp             go to state 55
    unary_exp            go to state 56
    unary_operator       go to state 57
    postfix_exp          go to state 58
    primary_exp          go to state 59
    consts               go to state 21


State 39

  126 unary_operator: '&' .

    $default  reduce using rule 126 (unary_operator)


State 40

  130 unary_operator: '~' .

    $default  reduce using rule 130 (unary_operator)


State 41

  131 unary_operator: '!' .

    $default  reduce using rule 131 (unary_operator)


State 42

   88 exp: exp . ',' assignment_exp
  141 primary_exp: '(' exp . ')'

    ','  shift, and go to state 79
    ')'  shift, and go to state 80


State 43

   87 exp: assignment_exp .

    $default  reduce using rule 87 (exp)


State 44

   89 assignment_exp: conditional_exp .

    $default  reduce using rule 89 (assignment_exp)


State 45

   93 conditional_exp: logical_or_exp .
   94                | logical_or_exp . '?' exp ':' conditional_exp
   97 logical_or_exp: logical_or_exp . or_const logical_and_exp

    or_const  shift, and go to state 81
    '?'       shift, and go to state 82

    $default  reduce using rule 93 (conditional_exp)


State 46

   96 logical_or_exp: logical_and_exp .
   99 logical_and_exp: logical_and_exp . and_const inclusive_or_exp

    and_const  shift, and go to state 83

    $default  reduce using rule 96 (logical_or_exp)


State 47

   98 logical_and_exp: inclusive_or_exp .
  101 inclusive_or_exp: inclusive_or_exp . '|' exclusive_or_exp

    '|'  shift, and go to state 84

    $default  reduce using rule 98 (logical_and_exp)


State 48

  100 inclusive_or_exp: exclusive_or_exp .
  103 exclusive_or_exp: exclusive_or_exp . '^' and_exp

    '^'  shift, and go to state 85

    $default  reduce using rule 100 (inclusive_or_exp)


State 49

  102 exclusive_or_exp: and_exp .
  105 and_exp: and_exp . '&' equality_exp

    '&'  shift, and go to state 86

    $default  reduce using rule 102 (exclusive_or_exp)


State 50

  104 and_exp: equality_exp .
  107 equality_exp: equality_exp . eq_const relational_exp

    eq_const  shift, and go to state 87

    $default  reduce using rule 104 (and_exp)


State 51

  106 equality_exp: relational_exp .
  109 relational_exp: relational_exp . '<' shift_expression
  110               | relational_exp . '>' shift_expression
  111               | relational_exp . rel_const shift_expression

    rel_const  shift, and go to state 88
    '<'        shift, and go to state 89
    '>'        shift, and go to state 90

    $default  reduce using rule 106 (equality_exp)


State 52

  108 relational_exp: shift_expression .
  113 shift_expression: shift_expression . shift_const additive_exp

    shift_const  shift, and go to state 91

    $default  reduce using rule 108 (relational_exp)


State 53

  112 shift_expression: additive_exp .
  115 additive_exp: additive_exp . '+' mult_exp
  116             | additive_exp . '-' mult_exp

    '+'  shift, and go to state 92
    '-'  shift, and go to state 93

    $default  reduce using rule 112 (shift_expression)


State 54

  114 additive_exp: mult_exp .
  118 mult_exp: mult_exp . '*' cast_exp
  119         | mult_exp . '/' cast_exp
  120         | mult_exp . '%' cast_exp

    '*'  shift, and go to state 94
    '/'  shift, and go to state 95
    '%'  shift, and go to state 96

    $default  reduce using rule 114 (additive_exp)


State 55

  117 mult_exp: cast_exp .

    $default  reduce using rule 117 (mult_exp)


State 56

   90 assignment_exp: unary_exp . assignment_operator assignment_exp
  121 cast_exp: unary_exp .

    PUNC  shift, and go to state 97
    '='   shift, and go to state 98

    $default  reduce using rule 121 (cast_exp)

    assignment_operator  go to state 99


State 57

  125 unary_exp: unary_operator . cast_exp

    int_const    shift, and go to state 15
    float_const  shift, and go to state 16
    id           shift, and go to state 17
    string       shift, and go to state 18
    inc_const    shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36
    '*'          shift, and go to state 37
    '('          shift, and go to state 38
    '&'          shift, and go to state 39
    '~'          shift, and go to state 40
    '!'          shift, and go to state 41

    cast_exp        go to state 100
    unary_exp       go to state 101
    unary_operator  go to state 57
    postfix_exp     go to state 58
    primary_exp     go to state 59
    consts          go to state 21


State 58

  123 unary_exp: postfix_exp .
  133 postfix_exp: postfix_exp . '[' exp ']'
  134            | postfix_exp . '(' argument_exp_list ')'
  135            | postfix_exp . '(' ')'
  136            | postfix_exp . '.' id
  137            | postfix_exp . inc_const

    inc_const  shift, and go to state 102
    '('        shift, and go to state 103
    '['        shift, and go to state 104
    '.'        shift, and go to state 105

    $default  reduce using rule 123 (unary_exp)


State 59

  132 postfix_exp: primary_exp .

    $default  reduce using rule 132 (postfix_exp)


State 60

    2 program_unit: DEFINE primary_exp program_unit .

    $default  reduce using rule 2 (program_unit)


State 61

   64 compound_stat: '{' . decl_list stat_list '}'
   65              | '{' . stat_list '}'
   66              | '{' . decl_list '}'
   67              | '{' . '}'

    int_const    shift, and go to state 15
    float_const  shift, and go to state 16
    id           shift, and go to state 106
    string       shift, and go to state 18
    type_const   shift, and go to state 107
    IF           shift, and go to state 108
    FOR          shift, and go to state 109
    DO           shift, and go to state 110
    WHILE        shift, and go to state 111
    BREAK        shift, and go to state 112
    SWITCH       shift, and go to state 113
    CONTINUE     shift, and go to state 114
    RETURN       shift, and go to state 115
    CASE         shift, and go to state 116
    DEFAULT      shift, and go to state 117
    inc_const    shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36
    '*'          shift, and go to state 37
    ';'          shift, and go to state 118
    '('          shift, and go to state 38
    '{'          shift, and go to state 61
    '}'          shift, and go to state 119
    '&'          shift, and go to state 39
    '~'          shift, and go to state 40
    '!'          shift, and go to state 41

    decl              go to state 120
    decl_list         go to state 121
    stat              go to state 122
    labeled_stat      go to state 123
    exp_stat          go to state 124
    compound_stat     go to state 125
    stat_list         go to state 126
    selection_stat    go to state 127
    iteration_stat    go to state 128
    jump_stat         go to state 129
    exp               go to state 130
    assignment_exp    go to state 43
    conditional_exp   go to state 44
    logical_or_exp    go to state 45
    logical_and_exp   go to state 46
    inclusive_or_exp  go to state 47
    exclusive_or_exp  go to state 48
    and_exp           go to state 49
    equality_exp      go to state 50
    relational_exp    go to state 51
    shift_expression  go to state 52
    additive_exp      go to state 53
    mult_exp          go to state 54
    cast_exp          go to state 55
    unary_exp         go to state 56
    unary_operator    go to state 57
    postfix_exp       go to state 58
    primary_exp       go to state 59
    consts            go to state 21


State 62

    8 function_definition: type_const id declarator compound_stat .

    $default  reduce using rule 8 (function_definition)


State 63

   21 direct_declarator: id .

    $default  reduce using rule 21 (direct_declarator)


State 64

   44 direct_abstract_declarator: '(' . abstract_declarator ')'
   50                           | '(' . param_type_list ')'
   52                           | '(' . ')'

    type_const  shift, and go to state 26
    '('         shift, and go to state 64
    ')'         shift, and go to state 131
    '['         shift, and go to state 65

    param_type_list             go to state 132
    param_list                  go to state 29
    param_decl                  go to state 30
    abstract_declarator         go to state 133
    direct_abstract_declarator  go to state 68


State 65

   46 direct_abstract_declarator: '[' . const_exp ']'
   48                           | '[' . ']'

    int_const    shift, and go to state 15
    float_const  shift, and go to state 16
    id           shift, and go to state 17
    string       shift, and go to state 18
    inc_const    shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36
    '*'          shift, and go to state 37
    '('          shift, and go to state 38
    ']'          shift, and go to state 134
    '&'          shift, and go to state 39
    '~'          shift, and go to state 40
    '!'          shift, and go to state 41

    conditional_exp   go to state 135
    const_exp         go to state 136
    logical_or_exp    go to state 45
    logical_and_exp   go to state 46
    inclusive_or_exp  go to state 47
    exclusive_or_exp  go to state 48
    and_exp           go to state 49
    equality_exp      go to state 50
    relational_exp    go to state 51
    shift_expression  go to state 52
    additive_exp      go to state 53
    mult_exp          go to state 54
    cast_exp          go to state 55
    unary_exp         go to state 101
    unary_operator    go to state 57
    postfix_exp       go to state 58
    primary_exp       go to state 59
    consts            go to state 21


State 66

   22 direct_declarator: direct_declarator . '[' const_exp ']'
   23                  | direct_declarator . '[' ']'
   24                  | direct_declarator . '(' param_type_list ')'
   25                  | direct_declarator . '(' id_list ')'
   26                  | direct_declarator . '(' ')'
   31 param_decl: type_const direct_declarator .

    '('  shift, and go to state 137
    '['  shift, and go to state 138

    $default  reduce using rule 31 (param_decl)


State 67

   32 param_decl: type_const abstract_declarator .

    $default  reduce using rule 32 (param_decl)


State 68

   43 abstract_declarator: direct_abstract_declarator .
   45 direct_abstract_declarator: direct_abstract_declarator . '[' const_exp ']'
   47                           | direct_abstract_declarator . '[' ']'
   49                           | direct_abstract_declarator . '(' param_type_list ')'
   51                           | direct_abstract_declarator . '(' ')'

    '('  shift, and go to state 139
    '['  shift, and go to state 140

    $default  reduce using rule 43 (abstract_declarator)


State 69

   19 declarator: '(' param_type_list ')' .

    $default  reduce using rule 19 (declarator)


State 70

   28 param_type_list: param_list ',' . param_const
   30 param_list: param_list ',' . param_decl

    type_const   shift, and go to state 26
    param_const  shift, and go to state 141

    param_decl  go to state 142


State 71

   14 init_declarator_list: init_declarator_list ',' init_declarator .

    $default  reduce using rule 14 (init_declarator_list)


State 72

   37 initializer: '{' . initializer_list '}'
   38            | '{' . initializer_list ',' '}'

    int_const    shift, and go to state 15
    float_const  shift, and go to state 16
    id           shift, and go to state 17
    string       shift, and go to state 18
    inc_const    shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36
    '*'          shift, and go to state 37
    '('          shift, and go to state 38
    '{'          shift, and go to state 72
    '&'          shift, and go to state 39
    '~'          shift, and go to state 40
    '!'          shift, and go to state 41

    initializer       go to state 143
    initializer_list  go to state 144
    assignment_exp    go to state 74
    conditional_exp   go to state 44
    logical_or_exp    go to state 45
    logical_and_exp   go to state 46
    inclusive_or_exp  go to state 47
    exclusive_or_exp  go to state 48
    and_exp           go to state 49
    equality_exp      go to state 50
    relational_exp    go to state 51
    shift_expression  go to state 52
    additive_exp      go to state 53
    mult_exp          go to state 54
    cast_exp          go to state 55
    unary_exp         go to state 56
    unary_operator    go to state 57
    postfix_exp       go to state 58
    primary_exp       go to state 59
    consts            go to state 21


State 73

   16 init_declarator: declarator '=' initializer .

    $default  reduce using rule 16 (init_declarator)


State 74

   36 initializer: assignment_exp .

    $default  reduce using rule 36 (initializer)


State 75

  124 unary_exp: inc_const unary_exp .

    $default  reduce using rule 124 (unary_exp)


State 76

   17 spec_qualifier_list: type_const . spec_qualifier_list
   18                    | type_const .

    type_const  shift, and go to state 76

    $default  reduce using rule 18 (spec_qualifier_list)

    spec_qualifier_list  go to state 145


State 77

   41 type_name: spec_qualifier_list . abstract_declarator
   42          | spec_qualifier_list .

    '('  shift, and go to state 64
    '['  shift, and go to state 65

    $default  reduce using rule 42 (type_name)

    abstract_declarator         go to state 146
    direct_abstract_declarator  go to state 68


State 78

  122 cast_exp: '(' type_name . ')' cast_exp

    ')'  shift, and go to state 147


State 79

   88 exp: exp ',' . assignment_exp

    int_const    shift, and go to state 15
    float_const  shift, and go to state 16
    id           shift, and go to state 17
    string       shift, and go to state 18
    inc_const    shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36
    '*'          shift, and go to state 37
    '('          shift, and go to state 38
    '&'          shift, and go to state 39
    '~'          shift, and go to state 40
    '!'          shift, and go to state 41

    assignment_exp    go to state 148
    conditional_exp   go to state 44
    logical_or_exp    go to state 45
    logical_and_exp   go to state 46
    inclusive_or_exp  go to state 47
    exclusive_or_exp  go to state 48
    and_exp           go to state 49
    equality_exp      go to state 50
    relational_exp    go to state 51
    shift_expression  go to state 52
    additive_exp      go to state 53
    mult_exp          go to state 54
    cast_exp          go to state 55
    unary_exp         go to state 56
    unary_operator    go to state 57
    postfix_exp       go to state 58
    primary_exp       go to state 59
    consts            go to state 21


State 80

  141 primary_exp: '(' exp ')' .

    $default  reduce using rule 141 (primary_exp)


State 81

   97 logical_or_exp: logical_or_exp or_const . logical_and_exp

    int_const    shift, and go to state 15
    float_const  shift, and go to state 16
    id           shift, and go to state 17
    string       shift, and go to state 18
    inc_const    shift, and go to state 34
    '+'          shift, and go to state 35
    '-'          shift, and go to state 36
    '*'          shift, and go to state 37
    '('          shift, and go to state 38
    '&'          shift, and go to state 39
    '~'          shift, and go to state 40
    '!'          shift, and go to state 41

    logical_and_exp   go to state 149
    inclusive_or_exp  go to state 47
    exclusive_or_exp  go to state 48
    and_exp           go to state 49
    equality_exp      go to state 50
    relational_exp    go to state 51
    shift_expression  go to state 52
    additive_exp      go to state 53
    mult_exp          go to state 54
    cast_exp          go to state 55
    unary_exp         go to state 101
    unary_operator    go to state 57
    postfix_exp       go to state 58
    primary_exp       go to state 59
    consts            go to state 21


State 82

   94 conditional_exp: logical_or_exp '?' . exp ':' conditional_exp
